tests/syntactic/sourceloc5/sourceloc5.err
Error: syntax error, unexpected ., expecting end of file in file sourceloc5.dl at line 2
.notexpected
^------------
1 errors generated, evaluation aborted
