tests/syntactic/sourceloc5/sourceloc5.dl
// error is at line 2
.notexpected
